extended Dataset class, other small changes