@@ -146,24 +146,14 @@
                             <id>CanonicalizeUris</id>
                             <mainClass>org.dbpedia.extraction.scripts.CanonicalizeUris</mainClass>
                             <jvmArgs><jvmArg>-server</jvmArg>
-                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg></jvmArgs>
+                            <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg></jvmArgs>
                             <jvmArgs>
                                 <jvmArg>-server</jvmArg>
                                 <jvmArg>-Xmx20G</jvmArg><!-- processing languages in parallel takes a lot of space -->
                                 <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
                                 <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
-                            </jvmArgs>
-                        </launcher>
-                        <launcher>
-                            <id>CanonicalizeIris</id>
-                            <mainClass>org.dbpedia.extraction.scripts.CanonicalizeIris</mainClass>
-                            <jvmArgs><jvmArg>-server</jvmArg>
-                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg></jvmArgs>
-                            <jvmArgs>
-                                <jvmArg>-server</jvmArg>
-                                <jvmArg>-Xmx20G</jvmArg><!-- processing languages in parallel takes a lot of space -->
-                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
-                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                                <jvmArg>-XX:+PrintGC</jvmArg>
+                                <jvmArg>-XX:+PrintGCTimeStamps</jvmArg>
                             </jvmArgs>
                         </launcher>
                         <launcher>
